--- a/ConvertZZ/MainWindow.xaml
+++ b/ConvertZZ/MainWindow.xaml
@@ -5,36 +5,48 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ConvertZZ"
         mc:Ignorable="d"
-        Title="MainWindow" Height="auto" Width="auto" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="None" 
-      AllowsTransparency="True"
-MouseDown="Window_MouseDown"
-     
-      Background="Transparent"
-        Topmost="True" MouseUp="Window_MouseUp" SizeToContent="WidthAndHeight">
+        Title="MainWindow" Height="64" Width="64" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="None" 
+      AllowsTransparency="True" Background="Transparent"
+MouseDown="Window_MouseDown"      
+        Topmost="True" MouseUp="Window_MouseUp" AllowDrop="True" Drop="Window_Drop">
     
     <Grid>
-        
-        <Ellipse Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="64" Stroke="Black" VerticalAlignment="Top" Width="64">
-            <Ellipse.ContextMenu>
-                <ContextMenu>
-                    <MenuItem Header="GBK>Big5"/>
-                    <MenuItem Header="Big5>GBK"/>
-                    <MenuItem Header="Unicod簡>Unicode繁"/>
-                    <MenuItem Header="Unicode繁>Unicode簡"/>
-                    <MenuItem Header="純文字檔案轉換"/>
-                    <MenuItem Header="資料夾及檔名轉換"/>
-                 
-                    <MenuItem Header="其他">
-                        <MenuItem Header="Unicode>Html十進制"/>
-                        <MenuItem Header="Unicode>Html十六進制"/>
-                    </MenuItem>
-                    <MenuItem Header="Setting" Click="Exit_Click"/>
-                    <MenuItem Header="Exit" Click="Exit_Click"/>
-                </ContextMenu>
-            </Ellipse.ContextMenu>
-            
-        </Ellipse>
-        <Label Content="z" HorizontalAlignment="Center" FontSize="48" IsEnabled="False" FontWeight="Bold" VerticalAlignment="Center" Margin="15,-7,15,6"  />
-
+        <Grid.ContextMenu>
+            <ContextMenu>
+                <MenuItem Uid="a1" Header="GBK>Big5" Click="MenuItem_Click"/>
+                <MenuItem Uid="a2" Header="Big5>GBK" Click="MenuItem_Click"/>
+                <MenuItem Uid="a3" Header="Unicod簡>Unicode繁" Click="MenuItem_Click"/>
+                <MenuItem Uid="a4" Header="Unicode繁>Unicode簡" Click="MenuItem_Click"/>
+                <Separator/>
+                <MenuItem Uid="b1"  Header="純文字檔案轉換" Click="MenuItem_Click"/>
+                <MenuItem Uid="b2" Header="資料夾及檔名轉換" Click="MenuItem_Click"/>
+                <Separator/>
+                <MenuItem Header="其他">
+                    <MenuItem Uid="za1" Header="Unicode>Html十進制" Click="MenuItem_Click"/>
+                    <MenuItem Uid="za2" Header="Unicode>Html十六進制" Click="MenuItem_Click"/>
+                    <Separator/>
+                    <MenuItem Uid="zb1" Header="Unicode>GBK" Click="MenuItem_Click"/>
+                    <MenuItem Uid="zb2" Header="Unicode>Big5" Click="MenuItem_Click"/>
+                    <MenuItem Uid="zb3" Header="Unicode>Shift-JIS" Click="MenuItem_Click"/>
+                    <Separator/>
+                    <MenuItem Uid="zc1" Header="Shift-JIS>GBK" Click="MenuItem_Click"/>
+                    <MenuItem Uid="zc2" Header="Shift-JIS>Big5" Click="MenuItem_Click"/>
+                    <MenuItem Uid="zc3" Header="GBK>Shift-JIS" Click="MenuItem_Click"/>
+                    <MenuItem Uid="zc4" Header="Big5>Shift-JIS" Click="MenuItem_Click"/>
+                    <Separator/>
+                    <MenuItem Uid="zd1" Header="HZ>GBK" Click="MenuItem_Click"/>
+                    <MenuItem Uid="zd2" Header="HZ>Big5" Click="MenuItem_Click"/>
+                    <MenuItem Uid="zd3" Header="GBK>HZ" Click="MenuItem_Click"/>
+                    <MenuItem Uid="zd4" Header="Big5>HZ" Click="MenuItem_Click"/>
+                    <Separator/>
+                    <MenuItem Uid="ze1" Header="GBK繁體>GBK簡體" Click="MenuItem_Click"/>
+                    <MenuItem Uid="ze2" Header="GBK簡體>GBK繁體" Click="MenuItem_Click"/>                    
+                </MenuItem>
+                <MenuItem Header="Setting" Click="Exit_Click"/>
+                <MenuItem Header="Exit" Click="Exit_Click"/>
+            </ContextMenu>
+        </Grid.ContextMenu>
+        <Ellipse Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="64" Stroke="Black" VerticalAlignment="Top" Width="64"/>
+        <TextBlock  Text="Z" FontSize="48"  FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Opacity="0.99"/>        
     </Grid>
 </Window>
