--- a/ConvertZZ/Window_TextConvertr.xaml
+++ b/ConvertZZ/Window_TextConvertr.xaml
@@ -5,8 +5,155 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ConvertZZ"
         mc:Ignorable="d"
-        Title="TextConvertr" Height="300" Width="300">
+        Title="TextConvertr" Height="562" Width="1188">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <TabControl  Grid.Row="0" Grid.RowSpan="2">
+            <TabControl.Style>
+                <Style TargetType="{x:Type TabControl}">
+                    <Setter Property="Background" Value="Transparent"/>
+                    <Setter Property="BorderThickness" Value="1"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type TabControl}">
+                                <Grid KeyboardNavigation.TabNavigation="Local" ClipToBounds="True" SnapsToDevicePixels="True">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+                                    <StackPanel IsItemsHost="True" Orientation="Horizontal" Margin="10,0" HorizontalAlignment="Center"/>
+                                    <ContentPresenter Grid.Row="1" Name="PART_SelectedContentHost" Content="{TemplateBinding TabControl.SelectedContent}" ContentSource="SelectedContent" ContentTemplate="{TemplateBinding TabControl.SelectedContentTemplate}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Margin="0,3,0,0"></ContentPresenter>
+                                </Grid>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </TabControl.Style>
+
+            <TabItem Header="檔案模式">
+                <TabItem.Style>
+                    <Style TargetType="{x:Type TabItem}">
+                        <Setter Property="Background" Value="Transparent"/>
+                        <Setter Property="BorderThickness" Value="0"/>
+                        <!--<Setter Property="Foreground" Value="{StaticResource mainRegionControlForegroundBrush}"></Setter>-->
+                        <Setter Property="Header" Value="{Binding Content.DataContext.Title, RelativeSource={RelativeSource Self}}"/>
+                        <Setter Property="Margin" Value="2"/>
+                        <Setter Property="SnapsToDevicePixels" Value="True"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type TabItem}">
+                                    <RadioButton IsChecked="{Binding IsSelected, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}" Content="{TemplateBinding Header}" Foreground="{TemplateBinding Foreground}" Margin="{TemplateBinding Margin}"/>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </TabItem.Style>
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition Height="auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <ListView x:Name="listview" ItemsSource="{Binding FileList,Mode=TwoWay}" Grid.ColumnSpan="2">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="　">
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <CheckBox Tag="{Binding ID}" IsChecked="{Binding isChecked, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                                <GridViewColumn Width="auto" Header="File Name" DisplayMemberBinding="{Binding FileName,Mode=TwoWay}" />
+                                <GridViewColumn Width="auto" Header="File Path" DisplayMemberBinding="{Binding FilePath}" />
+                            </GridView>
+                        </ListView.View>                        
+                    </ListView>
+                    
+                    <Button Content="瀏覽" Grid.Row="1" VerticalAlignment="Center" Margin="5" Padding="0,5" Click="Button_SelectFile_Clicked"/>
+                    <Button Content="清空" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Margin="5" Padding="0,5" Click="Button_Clear_Clicked"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="剪貼簿模式">
+                <TabItem.Style>
+                    <Style TargetType="{x:Type TabItem}">
+                        <Setter Property="Background" Value="Transparent"/>
+                        <Setter Property="BorderThickness" Value="0"/>
+                        <!--<Setter Property="Foreground" Value="{StaticResource mainRegionControlForegroundBrush}"></Setter>-->
+                        <Setter Property="Header" Value="{Binding Content.DataContext.Title, RelativeSource={RelativeSource Self}}"/>
+                        <Setter Property="Margin" Value="2"/>
+                        <Setter Property="SnapsToDevicePixels" Value="True"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type TabItem}">
+                                    <RadioButton IsChecked="{Binding IsSelected, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}" Content="{TemplateBinding Header}" Foreground="{TemplateBinding Foreground}" Margin="{TemplateBinding Margin}"/>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </TabItem.Style>
+                <Grid>
+                    <TextBox Text=""/>
+                </Grid>
+            </TabItem>
+        </TabControl>
+        <Grid Grid.Row="2" Margin="0,10,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <StackPanel>
+                <RadioButton GroupName="origin" Content="UTF-8" Click="Encoding_Selected"/>
+                <RadioButton GroupName="origin" IsChecked="True" Content="BIG5" Click="Encoding_Selected"/>
+                <RadioButton GroupName="origin" Content="GBK" Click="Encoding_Selected"/>
+                <RadioButton GroupName="origin" Content="Shift-jis" Click="Encoding_Selected"/>
+                <RadioButton GroupName="origin" Content="Unicode-LE" Click="Encoding_Selected"/>
+                <RadioButton GroupName="origin" Content="Unicode-BE" Click="Encoding_Selected"/>
+                <RadioButton GroupName="origin" Content="HZ" Click="Encoding_Selected"/>
+                <RadioButton GroupName="origin" Content="JIS" Click="Encoding_Selected"/>
+                <RadioButton GroupName="origin" Content="EUC-JP" Click="Encoding_Selected"/>
+            </StackPanel>
+            <StackPanel Grid.Column="1">
+                <RadioButton GroupName="target" Content="UTF-8" Click="Encoding_Selected"/>
+                <RadioButton GroupName="target" Content="BIG5" Click="Encoding_Selected"/>
+                <RadioButton GroupName="target" IsChecked="True" Content="GBK" Click="Encoding_Selected"/>
+                <RadioButton GroupName="target" Content="Shift-jis" Click="Encoding_Selected"/>
+                <RadioButton GroupName="target" Content="Unicode-LE" Click="Encoding_Selected"/>
+                <RadioButton GroupName="target" Content="Unicode-BE" Click="Encoding_Selected"/>
+                <RadioButton GroupName="target" Content="HZ" Click="Encoding_Selected"/>
+                <RadioButton GroupName="target" Content="JIS" Click="Encoding_Selected"/>
+                <RadioButton GroupName="target" Content="EUC-JP" Click="Encoding_Selected"/>
+            </StackPanel>
+            <DockPanel Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="0,0,5,0">
+                <Label Content="輸出模式:" VerticalAlignment="Center"/>
+                <CheckBox Content="繁體中文" VerticalAlignment="Center" Padding="4,-1,5,0"/>
+                <CheckBox Content="繁體中文" VerticalAlignment="Center"/>
+            </DockPanel>
+        </Grid>
+        <Label Content="Input Preview" Grid.Column="1" Margin="10,0" />
+        <Label Content="Output Preview" Grid.Column="2"/>
+        <RichTextBox Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Margin="10,0" />
+        <RichTextBox Grid.Row="1" Grid.Column="2" Grid.RowSpan="2"/>
+        <Button Content="Convert" Grid.Row="3" Padding="5" Margin="0,10,0,0"/>
+        <Button Content="Output Path" Grid.Row="3" Grid.Column="2" Padding="5,7,5,5" Margin="0,10,0,0"/>
     </Grid>
 </Window>
