--- a/ConvertZZ/Window_TextConvertr.xaml
+++ b/ConvertZZ/Window_TextConvertr.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ConvertZZ"
         mc:Ignorable="d"
-        Title="TextConvertr" Height="562" Width="1188">
+        Title="TextConvertr" Height="562" Width="1188" Loaded="Window_Loaded" Closing="Window_Closing">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -108,7 +108,7 @@
                     </Style>
                 </TabItem.Style>
                 <Grid>
-                    <TextBox Text=""/>
+                    <TextBox Text="{Binding ClipBoard,Mode=TwoWay}"/>
                 </Grid>
             </TabItem>
         </TabControl>
