--- a/ConvertZZ/Window_TextConvertr.xaml
+++ b/ConvertZZ/Window_TextConvertr.xaml
@@ -69,7 +69,7 @@
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <ListView x:Name="listview" ItemsSource="{Binding FileList,Mode=TwoWay}" Grid.ColumnSpan="2">
+                    <ListView x:Name="listview" ItemsSource="{Binding FileList,Mode=TwoWay}" Grid.ColumnSpan="2" SelectionChanged="listview_SelectionChanged">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="　">
@@ -151,9 +151,9 @@
         </Grid>
         <Label Content="Input Preview" Grid.Column="1" Margin="10,0" />
         <Label Content="Output Preview" Grid.Column="2"/>
-        <RichTextBox Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Margin="10,0" />
-        <RichTextBox Grid.Row="1" Grid.Column="2" Grid.RowSpan="2"/>
-        <Button Content="Convert" Grid.Row="3" Padding="5" Margin="0,10,0,0"/>
+        <TextBox Text="{Binding InputPreviewText}" TextWrapping="Wrap" AcceptsReturn="True" Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Margin="10,0" VerticalScrollBarVisibility="Auto" />
+        <TextBox Text="{Binding OutputPreviewText}" TextWrapping="Wrap" AcceptsReturn="True" Grid.Row="1" Grid.Column="2" Grid.RowSpan="2" Margin="10,0" VerticalScrollBarVisibility="Auto" />
+        <Button Content="Convert" Grid.Row="3" Padding="5" Margin="0,10,0,0" Click="Button_Convert_Click"/>
         <Button Content="Output Path" Grid.Row="3" Grid.Column="2" Padding="5,7,5,5" Margin="0,10,0,0"/>
     </Grid>
 </Window>
