--- a/ConvertZZ/MainWindow.xaml
+++ b/ConvertZZ/MainWindow.xaml
@@ -19,8 +19,8 @@ MouseDown="Window_MouseDown"
                 <MenuItem Uid="a3" Header="Unicod簡>Unicode繁" Click="MenuItem_Click"/>
                 <MenuItem Uid="a4" Header="Unicode繁>Unicode簡" Click="MenuItem_Click"/>
                 <Separator/>
-                <MenuItem Uid="b1"  Header="純文字檔案轉換" Click="MenuItem_Click"/>
-                <MenuItem Uid="b2" Header="資料夾及檔名轉換" Click="MenuItem_Click"/>
+                <MenuItem Uid="b1"  Header="文件/檔名轉換" Click="MenuItem_Click"/>
+                <MenuItem Uid="b2" Header="剪貼簿轉換" Click="MenuItem_Click"/>
                 <Separator/>
                 <MenuItem Header="Audio標籤轉換">
                     <MenuItem Uid="c1" Header="ID3" Click="MenuItem_Click"/>
