--- a/ConvertZZ/Moudle/Window_MessageBoxEx.xaml
+++ b/ConvertZZ/Moudle/Window_MessageBoxEx.xaml
@@ -6,9 +6,9 @@
         xmlns:local="clr-namespace:ConvertZZ.Moudle"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Window_MessageBoxEx" MinHeight="146.491" Width="325.439" Background="Transparent" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" WindowStyle="None" SizeToContent="WidthAndHeight">
+        Title="Window_MessageBoxEx" MinHeight="150" Width="380" Background="White" WindowStartupLocation="CenterScreen"  WindowStyle="SingleBorderWindow" Topmost="True" SizeToContent="WidthAndHeight" Foreground="#00000000" ResizeMode="NoResize">
 
-    <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth1" Margin="10,10,10,10"  VerticalAlignment="Stretch">
+    <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth1" Margin="3"  VerticalAlignment="Stretch">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -21,11 +21,11 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <TextBlock  TextWrapping="Wrap" Text="{Binding TextBlock_Text}" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" />
-            <CheckBox Content="{Binding CheckBox_Text}" IsChecked="{Binding CheckBox_IsChecked}" Visibility="{Binding CheckBox_Visibility}"/>
-            <Button Content="{Binding ButtonText1}" Grid.Row="2" Grid.Column="0" Margin="5" Click="Button_Click"/>
-            <Button Content="{Binding ButtonText2}" Grid.Row="2" Grid.Column="1" Margin="5" Click="Button_Click_1"/>
-            <Button Content="{Binding ButtonText3}" Grid.Row="2" Grid.Column="2" Margin="5" Click="Button_Click_2"/>
+            <TextBlock TextWrapping="Wrap" Text="{Binding TextBlock_Text}" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" Foreground="Black" />
+            <CheckBox Content="{Binding CheckBox_Text,Mode=TwoWay}" IsChecked="{Binding CheckBox_IsChecked}" Visibility="{Binding CheckBox_Visibility}" Grid.Row="1" Grid.ColumnSpan="3" Foreground="Black"/>
+            <Button Content="{Binding ButtonText1,Mode=TwoWay}" Grid.Row="2" Grid.Column="0" Margin="10" Click="Button_Click"/>
+            <Button Content="{Binding ButtonText2,Mode=TwoWay}" Grid.Row="2" Grid.Column="1" Margin="10" Click="Button_Click_1"/>
+            <Button Content="{Binding ButtonText3,Mode=TwoWay}" Grid.Row="2" Grid.Column="2" Margin="10" Click="Button_Click_2"/>
         </Grid>
     </materialDesign:Card>
 </Window>
