--- a/ConvertZZ/Pages/Page_File.xaml
+++ b/ConvertZZ/Pages/Page_File.xaml
@@ -1,10 +1,11 @@
-﻿<Page x:Class="ConvertZZ.Pages.Page_File"
+﻿<Page
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ConvertZZ.Pages"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:ConvertZZ="clr-namespace:ConvertZZ" x:Class="ConvertZZ.Pages.Page_File"
       mc:Ignorable="d" 
       d:DesignHeight="700" d:DesignWidth="1200"
       Title="Page_File">
@@ -38,13 +39,9 @@
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
-            <RadioButton Name="RadioButton_FileMode" Content="文件模式" IsChecked="{Binding FileMode,Mode=TwoWay}" GroupName="Mode" VerticalAlignment="Center"/>
-            <DockPanel Grid.Column="1" Margin="20,0,0,0">
-                <RadioButton Name="RadioButton_FileNameMode" Content="檔名模式" GroupName="Mode" Checked="ModeChange" VerticalAlignment="Center" />
-                <CheckBox IsEnabled="{Binding ElementName=RadioButton_FileNameMode,Path=IsChecked}" IsChecked="{Binding AccordingToMomFolder,Mode=TwoWay}" Content="包含母目錄" Margin="5,0,0,0" />
-            </DockPanel>
-            <GridSplitter Grid.Column="2" HorizontalAlignment="Left" Height="28" Margin="10,0,0,0" Width="5"/>
-            <CheckBox Grid.Column="3" IsChecked="{Binding AccordingToChild,Mode=TwoWay}" Content="包含子目錄下所有檔案" Margin="5,0,0,0" />
+            <RadioButton x:Name="RadioButton_FileMode" Content="文件模式" IsChecked="{Binding FileMode, Mode=TwoWay}" Checked="ModeChange" GroupName="Mode" VerticalAlignment="Center"/>            
+            <RadioButton x:Name="RadioButton_FileNameMode" Content="檔名模式" GroupName="Mode" Checked="ModeChange" Grid.Column="1" VerticalAlignment="Center" Margin="10,0,0,0" />                            
+            <CheckBox Grid.Column="3" IsChecked="{Binding AccordingToChild, Mode=TwoWay}" Content="包含子目錄下所有檔案" Margin="5,0,0,0" />
         </Grid>
         <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth1"  Margin="10,2,10,5" Padding="10" Grid.Row="1" VerticalAlignment="Stretch">
             <Grid Grid.Row="1" Width="400">
@@ -56,22 +53,29 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <ListView x:Name="listview" ItemsSource="{Binding FileList,Mode=TwoWay}" materialDesign:DataGridAssist.CellPadding="4 2 2 2"
+                <Grid Grid.ColumnSpan="2">
+                    <Grid x:Name="Page1">
+                        <ConvertZZ:CheckboxTreeView x:Name="treeview" CheckedChanged="treeview_CheckedChanged" />
+                    </Grid>
+                    <Grid x:Name="Page2" Canvas.Top="600">
+                        <ListView x:Name="listview" Grid.Row="1" ItemsSource="{Binding FileList, Mode=TwoWay}" materialDesign:DataGridAssist.CellPadding="4 2 2 2"
   materialDesign:DataGridAssist.ColumnHeaderPadding="4 5 2 5" Grid.ColumnSpan="2" SelectionChanged="listview_SelectionChanged">
-                    <ListView.View>
-                        <GridView>
-                            <GridViewColumn Header=" ">
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <CheckBox Tag="{Binding ID}" IsChecked="{Binding isChecked, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                            <GridViewColumn Width="auto" Header="檔案名稱" DisplayMemberBinding="{Binding Name,Mode=TwoWay}" />
-                            <GridViewColumn Width="auto" Header="檔案路徑" DisplayMemberBinding="{Binding Path}" />
-                        </GridView>
-                    </ListView.View>
-                </ListView>
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Header=" ">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <CheckBox Tag="{Binding ID}" IsChecked="{Binding isChecked, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Width="auto" Header="檔案名稱" DisplayMemberBinding="{Binding Name, Mode=TwoWay}" />
+                                    <GridViewColumn Width="auto" Header="檔案路徑" DisplayMemberBinding="{Binding Path}" />
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+                    </Grid>
+                </Grid>
                 <Button Content="瀏覽" Grid.Row="1" VerticalAlignment="Center" Margin="5" Padding="0,5" Click="Button_SelectFile_Clicked"/>
                 <Button Content="清空" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Margin="5" Padding="0,5" Click="Button_Clear_Clicked"/>
             </Grid>
@@ -131,7 +135,7 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
-            <TextBox Text="{Binding OutputPath,Mode=TwoWay}"/>
+            <TextBox Text="{Binding OutputPath, Mode=TwoWay}"/>
             <Button Content="輸出路徑" Grid.Column="1" Padding="10,7,10,5" Margin="20,10,20,0" Click="Button_OutputPath_Click"/>
         </Grid>
     </Grid>
