--- a/ConvertZZ/Pages/Page_ClipBoard.xaml
+++ b/ConvertZZ/Pages/Page_ClipBoard.xaml
@@ -4,11 +4,79 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ConvertZZ.Pages"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="700" d:DesignWidth="1200"
       Title="Page_ClipBoard" Loaded="Page_Loaded" Unloaded="Page_Unloaded">
-
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth1" Margin="10,2,10,10" VerticalAlignment="Stretch">
+            <RichTextBox>
+                <FlowDocument>
+                    <Paragraph>
+                        <Run Text="{Binding ClipBoard}" IsEnabled="False"/>
+                    </Paragraph>
+                </FlowDocument>
+            </RichTextBox>
+        </materialDesign:Card>
+        <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth1" Margin="10,5,10,10" Padding="10" Grid.Row="2" VerticalAlignment="Stretch" Grid.Column="1">
+            <Grid>
+            <Grid VerticalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <StackPanel>
+                    <RadioButton GroupName="origin" Content="UTF-8" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="origin" IsChecked="True" Content="BIG5" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="origin" Content="GBK" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="origin" Content="Shift-jis" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="origin" Content="Unicode" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="origin" Content="UnicodeFFFE" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="origin" Content="hz-gb-2312 " Click="Encoding_Selected"/>
+                    <RadioButton GroupName="origin" Content="Iso-2022-jp" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="origin" Content="EUC-JP" Click="Encoding_Selected"/>
+                </StackPanel>
+                <StackPanel Grid.Column="1">
+                    <RadioButton GroupName="target" Content="UTF-8" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="target" Content="BIG5" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="target" IsChecked="True" Content="GBK" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="target" Content="Shift-jis" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="target" Content="Unicode" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="target" Content="UnicodeFFFE" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="target" Content="hz-gb-2312 " Click="Encoding_Selected"/>
+                    <RadioButton GroupName="target" Content="Iso-2022-jp" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="target" Content="EUC-JP" Click="Encoding_Selected"/>
+                </StackPanel>
+                <DockPanel Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="0,0,5,0">
+                    <Label Content="輸出模式:" VerticalAlignment="Center"/>
+                    <RadioButton Content="一般" IsChecked="True" Uid="NChinese"  VerticalAlignment="Center" Margin="0,0,4,0" Checked="Chinese_Click"/>
+                    <RadioButton Content="繁體中文" Uid="TChinese" VerticalAlignment="Center" Margin="0,0,4,0" Checked="Chinese_Click"/>
+                    <RadioButton Content="簡體中文" Uid="CChinese" VerticalAlignment="Center" Margin="0,0,4,0" Checked="Chinese_Click"/>
+                </DockPanel>
+            </Grid>
+                <Grid VerticalAlignment="Bottom">
+                    <Button Content="複製結果" Click="Button_CopyOutput_Click"/>
+                </Grid>
+            </Grid>
+            
+        </materialDesign:Card>
+        <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth1" Margin="10,2,10,10" VerticalAlignment="Stretch" Grid.Column="2">
+            <RichTextBox>
+                <FlowDocument>
+                    <Paragraph>
+                        <Run Text="{Binding Output}"/>
+                    </Paragraph>
+                </FlowDocument>
+            </RichTextBox>
+        </materialDesign:Card>
     </Grid>
 </Page>
