--- a/ConvertZZ/MainWindow.xaml
+++ b/ConvertZZ/MainWindow.xaml
@@ -21,8 +21,8 @@ MouseDown="Window_MouseDown"
                 <Separator/>
                 <MenuItem Uid="b1"  Header="文件/檔名轉換" Click="MenuItem_Click"/>
                 <MenuItem Uid="b2" Header="剪貼簿轉換" Click="MenuItem_Click"/>
-                <Separator/>
-                <MenuItem Header="Audio標籤轉換">
+                <Separator Visibility="Collapsed"/>
+                <MenuItem Header="Audio標籤轉換" Visibility="Collapsed">
                     <MenuItem Uid="c1" Header="ID3" Click="MenuItem_Click"/>
                     <MenuItem Uid="c2" Header="APE" Click="MenuItem_Click"/>
                     <MenuItem Uid="c3" Header="OGG" Click="MenuItem_Click"/>
