--- a/ConvertZZ/MainWindow.xaml
+++ b/ConvertZZ/MainWindow.xaml
@@ -1,59 +1,59 @@
 ﻿<Window x:Class="ConvertZZ.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ConvertZZ"
-        mc:Ignorable="d"
-        
+        mc:Ignorable="d"        
         Title="MainWindow" Height="64" Width="64" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="None" 
-      AllowsTransparency="True" Background="Transparent"
-MouseDown="Window_MouseDown"      
-        Topmost="True" MouseUp="Window_MouseUp" AllowDrop="True" Drop="Window_Drop">
-    
-    <Grid>
-        <Grid.ContextMenu>
-            <ContextMenu>
-                <MenuItem Uid="a1" Header="GBK>Big5" Click="MenuItem_Click"/>
-                <MenuItem Uid="a2" Header="Big5>GBK" Click="MenuItem_Click"/>
-                <MenuItem Uid="a3" Header="Unicod簡>Unicode繁" Click="MenuItem_Click"/>
-                <MenuItem Uid="a4" Header="Unicode繁>Unicode簡" Click="MenuItem_Click"/>
+        AllowsTransparency="True" Background="Transparent"
+        MouseDown="Window_MouseDown" MouseUp="Window_MouseUp" 
+        Closing="Window_Closing"
+        Topmost="True" AllowDrop="True" Drop="Window_Drop" 
+        DragDrop.DragEnter="Window_DragEnter"
+        >
+    <Window.Resources>
+        <ContextMenu x:Key="NotifyIconMenu">
+            <MenuItem Uid="a1" Header="GBK>Big5" Click="MenuItem_Click"/>
+            <MenuItem Uid="a2" Header="Big5>GBK" Click="MenuItem_Click"/>
+            <MenuItem Uid="a3" Header="Unicod簡>Unicode繁" Click="MenuItem_Click"/>
+            <MenuItem Uid="a4" Header="Unicode繁>Unicode簡" Click="MenuItem_Click"/>
+            <Separator/>
+            <MenuItem Uid="b1"  Header="文件/檔名轉換" Click="MenuItem_Click"/>
+            <MenuItem Uid="b2" Header="剪貼簿轉換" Click="MenuItem_Click"/>
+            <Separator Visibility="Collapsed"/>
+            <MenuItem Header="Audio標籤轉換" Visibility="Collapsed">
+                <MenuItem Uid="c1" Header="ID3" Click="MenuItem_Click"/>
+                <MenuItem Uid="c2" Header="APE" Click="MenuItem_Click"/>
+                <MenuItem Uid="c3" Header="OGG" Click="MenuItem_Click"/>
+            </MenuItem>
+            <Separator/>
+            <MenuItem Header="其他">
+                <MenuItem Uid="za1" Header="Unicode>Html Code十進制" Click="MenuItem_Click"/>
+                <MenuItem Uid="za2" Header="Unicode>Html Code十六進制" Click="MenuItem_Click"/>
+                <MenuItem Uid="za3" Header="HTML Code>Unicode" Click="MenuItem_Click"/>
                 <Separator/>
-                <MenuItem Uid="b1"  Header="文件/檔名轉換" Click="MenuItem_Click"/>
-                <MenuItem Uid="b2" Header="剪貼簿轉換" Click="MenuItem_Click"/>
-                <Separator Visibility="Collapsed"/>
-                <MenuItem Header="Audio標籤轉換" Visibility="Collapsed">
-                    <MenuItem Uid="c1" Header="ID3" Click="MenuItem_Click"/>
-                    <MenuItem Uid="c2" Header="APE" Click="MenuItem_Click"/>
-                    <MenuItem Uid="c3" Header="OGG" Click="MenuItem_Click"/>
-                </MenuItem>
+                <MenuItem Uid="zb1" Header="Unicode>GBK" Click="MenuItem_Click"/>
+                <MenuItem Uid="zb2" Header="Unicode>Big5" Click="MenuItem_Click"/>
+                <MenuItem Uid="zb3" Header="Unicode>Shift-JIS" Click="MenuItem_Click"/>
                 <Separator/>
-                <MenuItem Header="其他">
-                    <MenuItem Uid="za1" Header="Unicode>Html Code十進制" Click="MenuItem_Click"/>
-                    <MenuItem Uid="za2" Header="Unicode>Html Code十六進制" Click="MenuItem_Click"/>
-                    <MenuItem Uid="za3" Header="HTML Code>Unicode" Click="MenuItem_Click"/>
-                    <Separator/>
-                    <MenuItem Uid="zb1" Header="Unicode>GBK" Click="MenuItem_Click"/>
-                    <MenuItem Uid="zb2" Header="Unicode>Big5" Click="MenuItem_Click"/>
-                    <MenuItem Uid="zb3" Header="Unicode>Shift-JIS" Click="MenuItem_Click"/>
-                    <Separator/>
-                    <MenuItem Uid="zc1" Header="Shift-JIS>GBK" Click="MenuItem_Click"/>
-                    <MenuItem Uid="zc2" Header="Shift-JIS>Big5" Click="MenuItem_Click"/>
-                    <MenuItem Uid="zc3" Header="GBK>Shift-JIS" Click="MenuItem_Click"/>
-                    <MenuItem Uid="zc4" Header="Big5>Shift-JIS" Click="MenuItem_Click"/>
-                    <Separator/>
-                    <MenuItem Uid="zd1" Header="HZ>GBK" Click="MenuItem_Click"/>
-                    <MenuItem Uid="zd2" Header="HZ>Big5" Click="MenuItem_Click"/>
-                    <MenuItem Uid="zd3" Header="GBK>HZ" Click="MenuItem_Click"/>
-                    <MenuItem Uid="zd4" Header="Big5>HZ" Click="MenuItem_Click"/>
-                    <Separator/>                    
-                </MenuItem>
-                <MenuItem Header="隱藏懸浮球" Click="HideBall_Click"/>
-                <MenuItem Header="Setting" Click="Exit_Click"/>
-                <MenuItem Header="Exit" Click="Exit_Click"/>
-            </ContextMenu>
-        </Grid.ContextMenu>
+                <MenuItem Uid="zc1" Header="Shift-JIS>GBK" Click="MenuItem_Click"/>
+                <MenuItem Uid="zc2" Header="Shift-JIS>Big5" Click="MenuItem_Click"/>
+                <MenuItem Uid="zc3" Header="GBK>Shift-JIS" Click="MenuItem_Click"/>
+                <MenuItem Uid="zc4" Header="Big5>Shift-JIS" Click="MenuItem_Click"/>
+                <Separator/>
+                <MenuItem Uid="zd1" Header="HZ>GBK" Click="MenuItem_Click"/>
+                <MenuItem Uid="zd2" Header="HZ>Big5" Click="MenuItem_Click"/>
+                <MenuItem Uid="zd3" Header="GBK>HZ" Click="MenuItem_Click"/>
+                <MenuItem Uid="zd4" Header="Big5>HZ" Click="MenuItem_Click"/>
+                <Separator/>
+            </MenuItem>
+            <MenuItem Uid="1" Header="隱藏/顯示懸浮球" Click="MenuItem_Click"/>
+            <MenuItem Header="Setting" Click="Setting_Click"/>
+            <MenuItem Header="Exit" Click="Exit_Click"/>
+        </ContextMenu>
+    </Window.Resources>
+    <Grid ContextMenu="{StaticResource NotifyIconMenu}">
         <Ellipse Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="64" Stroke="Black" VerticalAlignment="Top" Width="64"/>
-        <TextBlock  Text="Z" FontSize="48"  FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Opacity="0.99"/>        
+        <TextBlock  Text="Z" FontSize="48"  FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Opacity="0.99"/>
     </Grid>
 </Window>
