--- a/ConvertZZ/Moudle/Window_MessageBoxEx.xaml
+++ b/ConvertZZ/Moudle/Window_MessageBoxEx.xaml
@@ -1,12 +1,11 @@
 ﻿<Window x:Class="ConvertZZ.Moudle.Window_MessageBoxEx"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ConvertZZ.Moudle"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Window_MessageBoxEx" MinHeight="150" Width="380" Background="White" WindowStartupLocation="CenterScreen"  WindowStyle="SingleBorderWindow" Topmost="True" SizeToContent="WidthAndHeight" Foreground="#00000000" ResizeMode="NoResize">
+        Title="Window_MessageBoxEx" MinHeight="150" Width="380" Background="Transparent" AllowsTransparency="True" WindowStartupLocation="CenterScreen"  WindowStyle="None" Topmost="True" SizeToContent="WidthAndHeight" Foreground="#00000000" ResizeMode="NoResize">
 
     <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth1" Margin="3"  VerticalAlignment="Stretch">
         <Grid>
@@ -22,7 +21,7 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock TextWrapping="Wrap" Text="{Binding TextBlock_Text}" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" Foreground="Black" />
-            <CheckBox Content="{Binding CheckBox_Text,Mode=TwoWay}" IsChecked="{Binding CheckBox_IsChecked}" Visibility="{Binding CheckBox_Visibility}" Grid.Row="1" Grid.ColumnSpan="3" Foreground="Black"/>
+            <CheckBox Content="{Binding CheckBox_Text,Mode=TwoWay}" IsChecked="{Binding CheckBox_IsChecked}" Visibility="{Binding CheckBox_Visibility}" Grid.Row="1" Grid.ColumnSpan="3" Foreground="Black" Margin="10"/>
             <Button Content="{Binding ButtonText1,Mode=TwoWay}" Grid.Row="2" Grid.Column="0" Margin="10" Click="Button_Click"/>
             <Button Content="{Binding ButtonText2,Mode=TwoWay}" Grid.Row="2" Grid.Column="1" Margin="10" Click="Button_Click_1"/>
             <Button Content="{Binding ButtonText3,Mode=TwoWay}" Grid.Row="2" Grid.Column="2" Margin="10" Click="Button_Click_2"/>
