修正經過系統睡眠(sleep)，喚醒後新視窗沒有畫面並大量占用CPU卡死的問題(MaterialDesignInXamlToolkit的issue559)

--- a/ConvertZZ/Pages/Page_AudioTags.xaml
+++ b/ConvertZZ/Pages/Page_AudioTags.xaml
@@ -3,8 +3,9 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       xmlns:local="clr-namespace:ConvertZZ.Pages"
-      mc:Ignorable="d" 
+      mc:Ignorable="d" materialDesign:ShadowAssist.CacheMode="{x:Null}"
       d:DesignHeight="300" d:DesignWidth="300"
       Title="Page_AudioTags">
 
