--- a/ConvertZZ/MainWindow.xaml
+++ b/ConvertZZ/MainWindow.xaml
@@ -3,11 +3,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"        
         Title="MainWindow" Height="64" Width="64" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="None" 
         AllowsTransparency="True" Background="Transparent"
         MouseDown="Window_MouseDown" MouseUp="Window_MouseUp" 
-        Closing="Window_Closing"
+        Closing="Window_Closing" materialDesign:ShadowAssist.CacheMode="{x:Null}"
         Topmost="True" AllowDrop="True" Drop="Window_Drop" 
         DragDrop.DragEnter="Window_DragEnter"
         >
