--- a/ConvertZZ/Pages/Page_ClipBoard.xaml
+++ b/ConvertZZ/Pages/Page_ClipBoard.xaml
@@ -4,7 +4,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      mc:Ignorable="d" 
+      mc:Ignorable="d" materialDesign:ShadowAssist.CacheMode="{x:Null}"
       d:DesignHeight="700" d:DesignWidth="1200"
       Title="Page_ClipBoard" Loaded="Page_Loaded" Unloaded="Page_Unloaded">
     <Grid>
