--- a/ConvertZZ/Window_DialogHost.xaml
+++ b/ConvertZZ/Window_DialogHost.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
+        mc:Ignorable="d" materialDesign:ShadowAssist.CacheMode="{x:Null}"
         Title="Window_DialogHost" Height="700" Width="1200" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" WindowStyle="None" 
         >
     <Window.Resources>
