--- a/ConvertZZ/MainWindow.xaml
+++ b/ConvertZZ/MainWindow.xaml
@@ -50,8 +50,8 @@
             </MenuItem>
             <MenuItem Uid="1" Header="隱藏/顯示懸浮球" Click="MenuItem_Click"/>
             <MenuItem Header="設定" Click="Setting_Click"/>
-            <MenuItem Header="關於Convertzz" Click="About_Click"/>
-            <MenuItem Header="結束Convertzz" Click="Exit_Click"/>
+            <MenuItem Header="關於ConvertZZ" Click="About_Click"/>
+            <MenuItem Header="結束ConvertZZ" Click="Exit_Click"/>
         </ContextMenu>
     </Window.Resources>
     <Grid ContextMenu="{StaticResource NotifyIconMenu}">
