發送的時候使按鈕不可操作 修正關閉視窗時因執行緒不同而出現的錯誤

--- a/ConvertZZ/Window_Report.xaml
+++ b/ConvertZZ/Window_Report.xaml
@@ -45,7 +45,7 @@
                         </Paragraph>
                     </FlowDocument>
                 </RichTextBox>
-                <Button Content="送出" Grid.Row="4" Grid.Column="1" Click="Button_Click"/>
+                <Button Name="Button_Send" Content="送出" Grid.Row="4" Grid.Column="1" Click="Button_Click"/>
             </Grid>
         </Grid>
     </materialDesign:Card>
