--- a/ConvertZZ/MainWindow.xaml
+++ b/ConvertZZ/MainWindow.xaml
@@ -22,7 +22,7 @@
             <MenuItem Uid="b1"  Header="文件/檔名轉換" Click="MenuItem_Click"/>
             <MenuItem Uid="b2" Header="剪貼簿轉換" Click="MenuItem_Click"/>
             <Separator Visibility="Collapsed"/>
-            <MenuItem Header="Audio標籤轉換" Visibility="Collapsed">
+            <MenuItem Header="Audio標籤轉換">
                 <MenuItem Uid="c1" Header="ID3" Click="MenuItem_Click"/>
                 <MenuItem Uid="c2" Header="APE" Click="MenuItem_Click"/>
                 <MenuItem Uid="c3" Header="OGG" Click="MenuItem_Click"/>
